// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReduxHelpers should get a http status from a service call response: fallback status 1`] = `200`;

exports[`ReduxHelpers should get a http status from a service call response: missing status 1`] = `0`;

exports[`ReduxHelpers should get a http status from a service call response: status 1`] = `200`;

exports[`ReduxHelpers should get a message from a service call response: 3XX fallback message 1`] = `"Multiple Choices"`;

exports[`ReduxHelpers should get a message from a service call response: 4XX fallback message 1`] = `"Bad Request"`;

exports[`ReduxHelpers should get a message from a service call response: 5XX fallback message 1`] = `"Internal Server Error"`;

exports[`ReduxHelpers should get a message from a service call response: response for 2XX 1`] = `"OK"`;

exports[`ReduxHelpers should get a message from a service call response: response for 4XX 1`] = `"Request failed with status code 400"`;

exports[`ReduxHelpers should have specific functions: reduxHelpers 1`] = `
Object {
  "FULFILLED_ACTION": [Function],
  "HTTP_STATUS_RANGE": [Function],
  "PENDING_ACTION": [Function],
  "REJECTED_ACTION": [Function],
  "generatedPromiseActionReducer": [Function],
  "getMessageFromResults": [Function],
  "getStatusFromResults": [Function],
  "setStateProp": [Function],
}
`;

exports[`ReduxHelpers should update a state object: dont reset state object 1`] = `
Object {
  "ipsum": false,
  "lorem": true,
}
`;

exports[`ReduxHelpers should update a state object: reset state object 1`] = `
Object {
  "ipsum": true,
  "lorem": true,
}
`;
